style: fix gap on leftPlayerBoard to fit elements

--- a/seasonssk.css
+++ b/seasonssk.css
@@ -284,7 +284,7 @@ h3 {
 	justify-content: center;
 	padding: 5px;
 	position: relative;
-	gap: 10px;
+	gap:3px;
 }
 .leftPlayerBoard .ssn-avatar {
 	width: 92px;
